# DPI-engine

./: .gitignore  PLAN.md  README.md  pyproject.toml  test_dpi.pcap
src/: README.md  connection_tracker.py  dpi_engine.py  dpi_types.py  fast_path.py  load_balancer.py  main.py  packet_parser.py  pcap_reader.py  rule_manager.py  sni_extractor.py  test_dpi.pcap  thread_safe_queue.py
